--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,11 @@ nav{
   box-sizing: border-box;
   border: 1px solid black;
   border-radius: 4px;
+  background-color: #f4f4fd;
+  padding: 24px 0;
   margin: 0;
+  margin-bottom: 8px;
+  height: 112px;
   width: 100%;
 }
 
@@ -323,6 +327,26 @@ nav{
   letter-spacing: 0.02em;
   text-align: center;
   background-color: #ffffff;
+}
+.sociallinks-icon-block{
+  display: flex;
+  justify-content: center;
+  gap:24px;
+  margin-top:8px;
+  margin-bottom:32px;
+}
+.sociallinks-icon{
+   background-color: #4D5AE5;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+}
+.icon{
+  width: 16px;
+  height: 16px;
 }
 .our-team-text-block {
   padding: 32px 0;
