--- a/css/styles.css
+++ b/css/styles.css
@@ -457,6 +457,57 @@ nav {
   align-items: flex-start;
 }
 
+.footer-wraper{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 120px;
+}
+
+.social-media{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.social-title{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.social-list{
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+.social-link:hover,
+.social-link:focus{
+  background-color: #31d0aa;
+}
+
+.social-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon{
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+}
+
 .logo-footer {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
