--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 main {
@@ -110,6 +112,7 @@ nav {
   color: #2e2f42;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -124,10 +127,11 @@ nav {
 .nav-link.active::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
+  border-radius: 2px;
   background-color: #404bbf;
 }
 .contacts {
@@ -152,6 +156,7 @@ nav {
   color: #434455;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -160,11 +165,14 @@ nav {
 }
 
 .hero {
-  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7)),
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/herobaner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -206,6 +214,7 @@ nav {
   min-width: 169px;
   height: 56px;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -224,19 +233,23 @@ nav {
   white-space: nowrap;
   border: 0;
 }
-.icon-advantages {
+
+.icon-box {
   display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: border-box;
-  border: 1px solid black;
-  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
+}
+.icon-advantages {
   padding: 24px 0;
   margin: 0;
-  margin-bottom: 8px;
-  height: 112px;
-  width: 100%;
+  width: auto;
+  box-sizing: content-box;
 }
 
 .advantages-list {
@@ -271,26 +284,31 @@ nav {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.sociallinks-icon-block {
+.sociallinks-link-block {
   display: flex;
   justify-content: center;
   gap: 24px;
   margin-top: 8px;
   margin-bottom: 32px;
 }
-.sociallinks-icon {
+
+.sociallinks-item{
+  width: 40px;
+  height: 40px;
+}
+.sociallinks-link {
   background-color: #4d5ae5;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
+  align-items: center;;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.sociallinks-icon:hover,
-.sociallinks-icon:focus{
-  background-color: #404BBF  ;
+.sociallinks-link:hover,
+.sociallinks-link:focus {
+  background-color: #404bbf;
 }
 .icon {
   width: 16px;
@@ -312,7 +330,7 @@ nav {
   margin: 0;
 }
 
-.our-team-title {
+.our-team-title{
   font-weight: 700;
   color: #2e2f42;
   font-size: 36px;
@@ -377,39 +395,36 @@ nav {
 }
 
 .portfolio-item:hover,
-.portfolio-item:focus{
-   box-shadow:
-    0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16),
-    0 1px 6px 0 rgba(46, 47, 66, 0.08);
+.portfolio-item:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item:hover .portfolio-baner,
-.portfolio-item:focus .portfolio-baner{
-  bottom: 0;
-}
 
-.portfolio-thumb{
+.portfolio-thumb {
   position: relative;
   overflow: hidden;
+
 }
 
-.portfolio-thumb:hover .portfolio-baner{
+.portfolio-item:hover .portfolio-overlay,
+.portfolio-item:focus .portfolio-overlay{
   transform: translateY(0);
 }
-
-.portfolio-baner{
+ 
+.portfolio-overlay{
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -100%;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
   color: #ffffff;
   text-align: center;
-  padding: 32px;
-  transition: bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-title {
@@ -453,24 +468,25 @@ nav {
 }
 
 .footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-wraper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  margin-right: 120px;
+}
+
+.social-media {
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.footer-wraper{
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  gap: 120px;
-}
-
-.social-media{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.social-title{
+.social-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -479,30 +495,35 @@ nav {
   margin-bottom: 16px;
 }
 
-.social-list{
+.social-list {
   display: flex;
   gap: 16px;
   padding: 0;
   margin: 0;
 }
 
+.social-item{
+  width: 40px;
+  height: 40px;
+}
+
 .social-link:hover,
-.social-link:focus{
+.social-link:focus {
   background-color: #31d0aa;
 }
 
-.social-link{
+.social-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon{
+.social-icon {
   fill: #ffffff;
   width: 24px;
   height: 24px;
