--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,7 @@ nav {
 .icon {
   width: 16px;
   height: 16px;
+  fill: f4f4fd;
 }
 
 .our-team {
@@ -398,6 +399,7 @@ nav {
 .portfolio-item:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 
@@ -414,13 +416,17 @@ nav {
  
 .portfolio-overlay{
   position: absolute;
+  top: 0;
   left: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   right: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
-  color: #ffffff;
+  color: #f4f4fd;
   text-align: center;
   padding: 40px 32px;
   transform: translateY(100%);
@@ -524,7 +530,7 @@ nav {
 }
 
 .social-icon {
-  fill: #ffffff;
+  fill: #f4f4fd;
   width: 24px;
   height: 24px;
 }
