--- a/css/styles.css
+++ b/css/styles.css
@@ -557,3 +557,27 @@ nav {
 .logo-studio-footer {
   color: #f4f4fd;
 }
+.subscribe-form{
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.subscribe-title{
+  display: inline-block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin: 0;
+}
+
+.form-group{
+  display: flex;
+  gap:24px;
+  justify-content: flex-end;
+  position: relative;
+  align-items: center;
+}
+
