--- a/css/styles.css
+++ b/css/styles.css
@@ -560,24 +560,74 @@ nav {
 .subscribe-form{
   margin-left: auto;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
 }
+
+.input-group{
+  display: flex;
+  flex-direction: column;
+}
+
 .subscribe-title{
-  display: inline-block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin: 0;
+  margin-bottom: 16px;
 }
 
-.form-group{
+.form-wraper{
   display: flex;
-  gap:24px;
-  justify-content: flex-end;
-  position: relative;
   align-items: center;
+}
+
+.email-input{
+  background-color: #2e2f42;
+  border: 1px solid #f4f4fd;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); 
+  color:#f4f4fd;
+  outline: none;
+}
+.email-input::placeholder{
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #e7e9fc;
+}
+.subscribe-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  border-radius: 4px;
+  padding: 8px auto;
+  width: 165px;
+  height: 40px;
+  background:#4d5ae5;
+  margin-left: 24px;
+  border: none;
+  outline: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus{
+  background-color: #404bbf;
+} 
+.subscribe-btn-title{
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0;
+  color:#f4f4fd;
+  
+}
+
+.subscribe-icon{
+  fill:#f4f4fd;
 }
 
