--- a/css/styles.css
+++ b/css/styles.css
@@ -642,9 +642,6 @@ nav {
   justify-content: center;
   align-items: center;
   z-index: 999;
-
-
-  pointer-events: 
   transition: opacity 0.3s ease;
 }
 
@@ -673,4 +670,55 @@ nav {
   width: 24px;
   height: 24px;
   color:#e7e9fc;
+}
+
+.modal-title{
+  font-size: 16px;
+  font-weight: 500;
+  color:#2e2f42;
+  margin-bottom: 16px;
+}
+
+.input-wraper{
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.input-label{
+  display: block;
+  font-size: 12px;
+  color: #2e2f42;
+  margin-bottom: 4px;
+}
+
+.modal-input{
+  width: 100%;
+  padding: 10px 10px 10px 36px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  font-size: 14px;
+  outline: none;
+}
+
+.modal-input:focus{
+  border-color: #4d5ae5;
+}
+
+.input-icon{
+  position: absolute;
+  top:50%;
+  left: 12px;
+  transform: translateY(-50%);
+  fill:#2e2f42;
+  pointer-events: none;
+}
+
+.modal-textarea{
+  width: 100%;
+  padding: 10px 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  font-size: 14px;
+  margin-bottom: 16px;
+  resize: none;
 }
