--- a/css/styles.css
+++ b/css/styles.css
@@ -684,7 +684,18 @@ nav {
   margin-bottom: 16px;
 }
 
+.modal-input-label,
 .input-label{
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+{
   display: block;
   font-size: 12px;
   color: #2e2f42;
@@ -700,7 +711,9 @@ nav {
   outline: none;
 }
 
-.modal-input:focus{
+.modal-input:focus,
+.modal-textarea:focus{
+  outline:none;
   border-color: #4d5ae5;
 }
 
@@ -708,9 +721,13 @@ nav {
   position: absolute;
   top:50%;
   left: 12px;
-  transform: translateY(-50%);
   fill:#2e2f42;
   pointer-events: none;
+}
+
+.input-wrapper:has(.modal-input-label:focus) svg,
+.input-wrapper:has(.modal-textarea:focus) svg {
+  stroke: #4D5AE5;
 }
 
 .modal-textarea{
@@ -721,4 +738,33 @@ nav {
   font-size: 14px;
   margin-bottom: 16px;
   resize: none;
+}
+
+.modal-checkbox-label{
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  font-size: 14px;
+  color: #2e2f42;
+}
+
+.modal-checkbox-label input{
+  margin-right: 8px;
+}
+
+.modal-btn-submit{
+  width: 100%;
+  padding: 12px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  border:none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-submit:hover,
+.modal-btn-submit:focus{
+  background-color: #404bbf;
 }
