--- a/css/styles.css
+++ b/css/styles.css
@@ -557,79 +557,73 @@ nav {
 .logo-studio-footer {
   color: #f4f4fd;
 }
-.subscribe-form{
-  margin-left: auto;
-  display: flex;
+
+.subscribe-box{
+    margin-left:auto
 }
 
-.input-group{
-  display: flex;
-  flex-direction: column;
+.subscribe-box-title{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#ffffff;
 }
 
-.subscribe-title{
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
+.subscribe-box-form{
+    display: flex;
+    gap: 24px;
 }
 
-.form-wraper{
-  display: flex;
-  align-items: center;
+.input{
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+    outline: none;
 }
 
-.email-input{
-  background-color: #2e2f42;
-  border: 1px solid #f4f4fd;
-  border-radius: 4px;
-  width: 264px;
-  height: 40px;
-  padding: 8px 16px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); 
-  color:#f4f4fd;
-  outline: none;
+.input::placeholder{
+    color:#ffffff;
 }
-.email-input::placeholder{
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 200%;
-  letter-spacing: 0.04em;
-  color: #e7e9fc;
-}
+
 .subscribe-btn{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-  border-radius: 4px;
-  padding: 8px auto;
-  width: 165px;
-  height: 40px;
-  background:#4d5ae5;
-  margin-left: 24px;
-  border: none;
-  outline: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    min-width: 165px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border:none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-btn:hover,
-.subscribe-btn:focus{
-  background-color: #404bbf;
-} 
-.subscribe-btn-title{
-  font-weight: 500;
-  font-size: 16px;
-  padding: 0;
-  color:#f4f4fd;
-  
+.subscribe-btn-icon{
+  margin-left: 16px;
+  fill:#ffffff;
 }
 
-.subscribe-icon{
-  fill:#f4f4fd;
+.subscribe-btn:focus,
+.subscribe-btn:hover{
+    background-color:#404bbf ;
 }
+
+
 .backdrop {
   position: fixed;
   top: 0;
