--- a/css/styles.css
+++ b/css/styles.css
@@ -793,43 +793,27 @@ nav {
    align-items: center;
    fill:transparent;
 }
-.checkbox-icon {
-  fill: transparent;
+
+.visually-hidden{
+  position: absolute;
 }
 
-input:checked + .checkbox-slot {
+input.visually-hidden:checked ~ label .checkbox-slot {
   background-color: #404bbf;
   border: none;
 }
 
-input:checked + .checkbox-slot .checkbox-icon {
+input.visually-hidden:checked ~ label .checkbox-icon {
   fill: #F4F4FD;
 }
-  /*.checkbox-wrapper{
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  color: #8e8f99;
-}
 
-.modal-checkbox-label input {
-  margin-right: 8px;
-}
-
-.modal-checkbox-label a {
-  color: #4d5ae5;
-  text-decoration: underline;
-}
-
-
-
-.policy-link {
-  color: #4d5ae5;
+.policy-link{
+  color:#4d5ae5;
   text-decoration: underline;
 }
 
 .modal-btn-submit {
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   margin-left: auto;
   margin-right: auto;
@@ -841,6 +825,8 @@ input:checked + .checkbox-slot .checkbox-icon {
   border-radius: 4px;
   font-size: 16px;
   font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
