--- a/css/styles.css
+++ b/css/styles.css
@@ -702,7 +702,7 @@ nav {
 
 .input-wrapper {
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-input-label {
@@ -726,7 +726,7 @@ nav {
   font-size: 14px;
   color: #2e2f42;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  outline: none;
+  outline: transparent;
 }
 
 .modal-input:focus,
@@ -801,6 +801,7 @@ nav {
 input.visually-hidden:checked ~ label .checkbox-slot {
   background-color: #404bbf;
   border: none;
+   fill: #F4F4FD;
 }
 
 input.visually-hidden:checked ~ label .checkbox-icon {
